<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Picolor</string>

    <string name="copyright" translatable="false">Copyright &#169; 2016 By_syk. All rights reserved.</string>

    <string name="dia_title_about">About</string>
    <string name="dia_bt_dismiss">Dismiss</string>

    <string name="menu_pic">Choose picture</string>
    <string name="menu_about">About</string>

    <string name="toast_copied">Copied to clipboard: %1$s</string>

    <string name="title_vibrant">Vibrant</string>
    <string name="desc_vibrant">A vibrant color from the picture.</string>
    <string name="title_vibrant_dark">Vibrant Dark</string>
    <string name="desc_vibrant_dark">A vibrant and dark color from the picture.</string>
    <string name="title_vibrant_light">Vibrant Light</string>
    <string name="desc_vibrant_light">A vibrant and light color from the picture.</string>
    <string name="title_muted">Muted</string>
    <string name="desc_muted">A muted color from the picture.</string>
    <string name="title_muted_dark">Muted Dark</string>
    <string name="desc_muted_dark">A muted and dark color from the picture.</string>
    <string name="title_muted_light">Muted Light</string>
    <string name="desc_muted_light">A muted and light color from the picture.</string>

    <string name="about_desc">
"Picolor is an app to extract prominent colors from an image.
\nA number of colors with different profiles are extracted from the image:
> Vibrant
> Vibrant Dark
> Vibrant Light
> Muted
> Muted Dark
> Muted Light
\n> Source code on GitHub:
[https://github.com/by-syk/Picolor](https://github.com/by-syk/Picolor)
\nCopyright &#169; 2016 By_syk. All rights reserved."</string>

</resources>
